--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,44 +5,54 @@
     <uses-permission-sdk-23 android:name="android.permission.INTERNET" />
 
     <application
-        android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/mi_ic_launcher"
-        android:roundIcon="@mipmap/mi_ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.BancoEnnama"
-        tools:targetApi="31">
-        <activity
-            android:name=".SettingsActivity"
-            android:exported="false" />
-        <activity
-            android:name=".activities.GlobalPositionActivity"
-            android:exported="false" />
-        <activity
-            android:name=".activities.MovementsActivity"
-            android:exported="false" />
-        <activity
-            android:name=".activities.TransferActivity"
-            android:exported="false" />
-        <activity
-            android:name=".activities.PasswordActivity"
-            android:exported="false" />
-        <activity
-            android:name=".activities.WelcomeActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+        android:name=".activities.CajeroApplication"
+    android:allowBackup="true"
+    android:dataExtractionRules="@xml/data_extraction_rules"
+    android:fullBackupContent="@xml/backup_rules"
+    android:icon="@mipmap/mi_ic_launcher"
+    android:roundIcon="@mipmap/mi_ic_launcher_round"
+    android:supportsRtl="true"
+    android:theme="@style/Theme.BancoEnnama"
+    tools:targetApi="31">
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".activities.MainActivity"
-            android:exported="false" />
-        <activity
-            android:name=".activities.LoginActivity"
-            android:exported="true" />
-    </application>
+    <activity
+        android:name=".activities.AtmListActivity"
+        android:exported="false" />
+    <activity
+        android:name=".activities.AtmFormActivity"
+        android:exported="false" />
+    <activity
+        android:name=".activities.AtmManagementActivity"
+        android:exported="false" />
+    <activity
+        android:name=".activities.SettingsActivity"
+        android:exported="false" />
+    <activity
+        android:name=".activities.GlobalPositionActivity"
+        android:exported="false" />
+    <activity
+        android:name=".activities.MovementsActivity"
+        android:exported="false" />
+    <activity
+        android:name=".activities.TransferActivity"
+        android:exported="false" />
+    <activity
+        android:name=".activities.PasswordActivity"
+        android:exported="false" />
+    <activity
+        android:name=".activities.WelcomeActivity"
+        android:exported="true">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+    </activity>
+    <activity
+        android:name=".activities.MainActivity"
+        android:exported="false" />
+    <activity
+        android:name=".activities.LoginActivity"
+        android:exported="true" />
+</application>
 
-</manifest>
+    </manifest>
